--- a/_posts/2022-11-05-welcome.md
+++ b/_posts/2022-11-05-welcome.md
@@ -1,8 +1,35 @@
 ---
 title: Welcome!
+author: njm
 date: 2022-11-05 10:00:00 -0500
 categories: [Misc, Site Updates]
 tags: [site updates]
 ---
 
-Welcome to I loot the Body! The goal of this blog is to provide tools and inspiration for Game Masters (GMs) and TTRPG players. Most of this content is focused on Dungeons & Dragons 5th edition because that's what I'm most familiar with. However, I do hope to branch out to other games in the future.
+Welcome to I loot the Body! I am excited to finally be getting this passion project of mine up and running. The goal of this blog is to provide tools and inspiration for TTRPG game masters and players. This hobby has been an enormous part of my life for the last 4 years and I hope that with this site I can give back in some small way to the community that has given so much to me. Thank you for being here with me.
+
+## My Backstory
+
+Although I wasn't introduced to D&D until my 20s, I like to think I have been training for this my whole life. For as long as I can remember I have been obsessed with all things fantasy, sci-fi, magic, and occult. As a child, I collected shelves full of dragon statues, figurines, and basically anything dragon themed. I tore through fantasy novels such as *The Inheritance Cycle*, *The Ranger's Apprentice*, *Dragon Rider*, and so many more. I vividly remember my little sister and I pouring through the [*Encyclopedia of Things That Never Were*](https://en.wikipedia.org/wiki/Encyclopedia_of_Things_That_Never_Were), choosing which mythological creatures would join us in battle against our imaginary foes.
+
+Like so many people, I started playing D&D in 2018 as the 5th edition of the game really began to rise in popularity. The topic of D&D randomly came up in conversation with a coworker and before I knew it I was sitting at a table with 5 friends pretending to be a dwarf fighter named Uldred Beardface (who, notably, did not have a beard). As a lifetime sci-fi/fantasy nerd, getting to really immerse myself in these fantasy worlds while eating pizza and hanging out with my friends was incredible. I was hooked. For the last 6 years I have played in or GMed hundreds of D&D sessions, creating amazing stories with nothing but some dice, some friends, and some imagination.
+
+## I Loot the Body
+
+Although I don't do it as my day job, I've always enjoyed computer programming. Over the years, I have started various personal coding projects in an attempt to keep what little skills I have sharp and maybe even learn some new ones. Most of those projects were abandoned after I lost interest or motivation. This time, in an attempt to keep myself focused, I decided to incorporate my favorite hobby, Dungeons & Dragons. Thus, armed with nothing but an idea and a modicum of programming knowledge, I set out to create a simple magic item generator for D&D games.
+
+[The actual generator](https://ilootthebody.com/generators/magic-item-generator.html) turned out to be much easier to create than I had initially thought. After about a week of work and tinkering I had something that I thought might actually be worth showing to someone besides my partner and my dogs. The harder part, as it turns out, was actually putting the tool into the hands of GMs and players. Thus, armed with nothing but a simple magic item generator and a lack of web development knowledge, I set out to build a website.
+
+After about a month of coding, Googling, trial and error, and many mistakes, a simple website was finally live! To make things even more exciting, after a couple of posts on Reddit, a couple of people were actually using it! As I began to maintain and improve the site two things became clear. First, the haphazard amalgamation of HTML, CSS, and JavaScript that was my site would soon become unmanageable as I added more features and content. Second, I wanted to start a blog in addition to the tools I create. Through GMing and playing D&D I've found that writing is an immensely satisfying creative outlet for me. I want this site to grow into a place for me to write and share the things rattling around inside my brain. Thus, armed with a dream and some lessons learned, I set out to completely overhaul my website.
+
+And you're looking at it! So far we just have one generator and a handful of blog posts but I've got plenty of ideas for the future.
+
+## On the Horizon
+
+My primary focus going forward will be on creating and improving on a suite of tools for GMs and players. I plan to add functionality to the existing magic item generator to specify item rarity, an option to include a curse on the item, and to add the ability to download the item as a card. I am beginning to work on an NPC generator that will include randomly generated names, motivations, backgrounds, and traits. Eventually I hope to add support for generating full NPC stat blocks as well.
+
+Alongside the generators, I will be periodically releasing blog posts related to a variety of topics (basically whatever I think is interesting at the time). These will range from homebrew ideas, worldbuilding details for my homebrew world, Cordia, and many more.
+
+Also, you've probably noticed that most of the content and tools are focused on Dungeons & Dragons 5th edition. That's because it is the system I'm most familiar with. However, I do hope to branch out to other systems in the future. If you've got any recommendations or suggestions for systems you'd like to see tools or content for please let me know! In the meantime, I try wherever possible to make the tools and content as system agnostic as I can.
+
+Lastly, just note that none of this is set in stone. This site will hopefully evolve based on the feedback of users like you. Wherever we end up on this unexpected journey, I just want to thank you for being a part of it. Happy looting!
