Edited welcome post.

--- a/_posts/2022-11-05-welcome.md
+++ b/_posts/2022-11-05-welcome.md
@@ -2,7 +2,7 @@
 title: Welcome!
 author: njm
 date: 2022-11-05 10:00:00 -0500
-categories: [Misc, Site Updates]
+categories: [Misc]
 tags: [site updates]
 ---
 
@@ -30,6 +30,6 @@ My primary focus going forward will be on creating and improving on a suite of t
 
 Alongside the generators, I will be periodically releasing blog posts related to a variety of topics (basically whatever I think is interesting at the time). These will range from homebrew ideas, worldbuilding details for my homebrew world, Cordia, and many more.
 
-Also, you've probably noticed that most of the content and tools are focused on Dungeons & Dragons 5th edition. That's because it is the system I'm most familiar with. However, I do hope to branch out to other systems in the future. If you've got any recommendations or suggestions for systems you'd like to see tools or content for please let me know! In the meantime, I try wherever possible to make the tools and content as system agnostic as I can.
+Also, you've probably noticed that most of the content and tools are focused on Dungeons & Dragons 5th edition. That's because it is the system I'm most familiar with. However, I do hope to branch out to other systems in the future. If you've got any suggestions for systems you'd like to see tools or content for please let me know! In the meantime, I try wherever possible to make the tools and content here as system agnostic as I can.
 
 Lastly, just note that none of this is set in stone. This site will hopefully evolve based on the feedback of users like you. Wherever we end up on this unexpected journey, I just want to thank you for being a part of it. Happy looting!
