World of Cordia article as well as updating post categories.

--- a/_posts/2022-11-05-welcome.md
+++ b/_posts/2022-11-05-welcome.md
@@ -2,7 +2,7 @@
 title: Welcome!
 author: njm
 date: 2022-11-05 10:00:00 -0500
-categories: [Misc]
+categories: [Website, General]
 tags: [site updates]
 ---
 
