--- a/_posts/2022-11-05-welcome.md
+++ b/_posts/2022-11-05-welcome.md
@@ -14,6 +14,8 @@ Although I wasn't introduced to D&D until my 20s, I like to think I have been tr
 
 Like so many people, I started playing D&D in 2018 as the 5th edition of the game really began to rise in popularity. The topic of D&D randomly came up in conversation with a coworker and before I knew it I was sitting at a table with 5 friends pretending to be a dwarf fighter named Uldred Beardface (who, notably, did not have a beard). As a lifetime sci-fi/fantasy nerd, getting to really immerse myself in these fantasy worlds while eating pizza and hanging out with my friends was incredible. I was hooked. For the last 4 years I have played in or GMed hundreds of D&D sessions, creating amazing stories with nothing but some dice, some friends, and some imagination.
 
+{% include ads-horizontal-long.html %}
+
 ## I Loot the Body
 
 Although I don't do it as my day job, I've always enjoyed computer programming. Over the years, I have started various personal coding projects in an attempt to keep what little skills I have sharp and maybe even learn some new ones. Most of those projects were abandoned after I lost interest or motivation. This time, in an attempt to keep myself focused, I decided to incorporate my favorite hobby, Dungeons & Dragons. Thus, armed with nothing but an idea and a modicum of programming knowledge, I set out to create a simple magic item generator for D&D games.
@@ -33,3 +35,5 @@ Alongside the generators, I will be periodically releasing blog posts related to
 Also, you've probably noticed that most of the content and tools are focused on Dungeons & Dragons 5th edition. That's because it is the system I'm most familiar with. However, I do hope to branch out to other systems in the future. If you've got any suggestions for systems you'd like to see tools or content for please let me know! In the meantime, I try wherever possible to make the tools and content here as system agnostic as I can.
 
 Lastly, just note that none of this is set in stone. This site will hopefully evolve based on the feedback of users like you. Wherever we end up on this unexpected journey, I just want to thank you for being a part of it. Happy looting!
+
+{% include ads-horizontal-long.html %}
