--- a/_posts/2022-11-05-welcome.md
+++ b/_posts/2022-11-05-welcome.md
@@ -14,7 +14,7 @@ Although I wasn't introduced to D&D until my 20s, I like to think I have been tr
 
 Like so many people, I started playing D&D in 2018 as the 5th edition of the game really began to rise in popularity. The topic of D&D randomly came up in conversation with a coworker and before I knew it I was sitting at a table with 5 friends pretending to be a dwarf fighter named Uldred Beardface (who, notably, did not have a beard). As a lifetime sci-fi/fantasy nerd, getting to really immerse myself in these fantasy worlds while eating pizza and hanging out with my friends was incredible. I was hooked. For the last 4 years I have played in or GMed hundreds of D&D sessions, creating amazing stories with nothing but some dice, some friends, and some imagination.
 
-{% include ads-horizontal-long.html %}
+{% include ads-in-article.html %}
 
 ## I Loot the Body
 
@@ -36,4 +36,4 @@ Also, you've probably noticed that most of the content and tools are focused on 
 
 Lastly, just note that none of this is set in stone. This site will hopefully evolve based on the feedback of users like you. Wherever we end up on this unexpected journey, I just want to thank you for being a part of it. Happy looting!
 
-{% include ads-horizontal-long.html %}
+{% include ads-in-article.html %}
